[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code_to_pdf"
version = "1.0.0"
description = "Generate PDF documents from source code with syntax highlighting."
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Victor Bonnelle", email = "victor.bonnelle@proton.me" },
]
dependencies = [
    "docstring-parser>=0.15",
    "pydantic>=2.4.0",
    "pygments>=2.16.0",
]

[project.urls]
Homepage = "https://github.com/victorbnl/code-to-pdf"
Tracker = "https://github.com/victorbnl/code-to-pdf/issues"
Source = "https://github.com/victorbnl/code-to-pdf"

[project.scripts]
code-to-pdf = "code_to_pdf.cli:main"
